Adjustments to accomodate Japanese text

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ player.addListener({
     .cardtext {
         font-size: 2em;
         color: rgb(197, 32, 32);
+        white-space: nowrap;
     }
     .cardtext-top {
         position: relative;
@@ -93,8 +94,8 @@ player.addListener({
 
 <body>
     <div class="card card-rotation">
-        <div class="cardtext cardtext-top">♥&nbsp;Top</div>
-        <div class="cardtext cardtext-bottom">♥&nbsp;Bottom</div>
+        <div class="cardtext cardtext-top">♥&nbsp;テキスト</div>
+        <div class="cardtext cardtext-bottom">♥&nbsp;テキスト</div>
         <div class="image-zone"></div>
     </div>
     <span id="text"></span>
