--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@ player.addListener({
 
   onTimerReady() {
     document.querySelector("#play").className="";
-    document.querySelector("#volume").className="";
+    document.querySelector("#volume").className="loaded-block";
+    document.querySelector("#volume-slider").className="";
     document.querySelector("#loading").className="disabled";
+    // Initialize mute function
+    document.querySelector("#volume").toggledValue = 0;
+    onVolumeChange();
   },
 
   onVideoReady: (v) => {
@@ -121,9 +125,6 @@ player.addListener({
       }
       beatText.push(lastText);
     }
-    // Export for debugging
-    console.log(beatText.length);
-    window.beatText = beatText;
   },
 
   onPlay() {
@@ -189,13 +190,31 @@ document.querySelector("a#stop").addEventListener("click", (e) => {
   }
   resetAnimation();
   return false;
-})
+});
 
 document.querySelector("#volume-slider").addEventListener("input", (e) => {
+  onVolumeChange();
+});
+
+document.querySelector("#volume").addEventListener("click", (e) => {
+  let newVolume = e.target.toggledValue;
+  e.target.toggledValue = document.querySelector("#volume-slider").value;
+  document.querySelector("#volume-slider").value = newVolume;
+  onVolumeChange();
+});
+
+function onVolumeChange() {
+  let volume = document.querySelector("#volume-slider").value;
   if (player) {
-    player.volume = e.target.value;
+    player.volume = volume;
   }
-})
+  if (volume == 0) {
+    document.querySelector("#volume").textContent = "🔈\uFE0E ";
+  }
+  else {
+    document.querySelector("#volume").textContent = "🔊\uFE0E ";
+  }
+}
 </script>
 
 <style>
@@ -238,6 +257,9 @@ document.querySelector("#volume-slider").addEventListener("input", (e) => {
 
     .disabled {
       display: none;
+    }
+    .loaded-block {
+      display: inline-block;
     }
 
     .deck-position {
@@ -370,7 +392,7 @@ document.querySelector("#volume-slider").addEventListener("input", (e) => {
     }
     #header > a {
       vertical-align: middle;
-      padding: 15px;
+      padding: 5px;
       color: rgb(197, 32, 32);
       text-decoration: none;
     }
@@ -381,8 +403,7 @@ document.querySelector("#volume-slider").addEventListener("input", (e) => {
       font-family: fantasy;
     }
     #volume {
-      vertical-align: middle;
-      width: 50px;
+      width: 65px;
     }
     #volume-slider {
       vertical-align: middle;
@@ -404,7 +425,7 @@ document.querySelector("#volume-slider").addEventListener("input", (e) => {
   <div id="header">
     <a href="#" id="play" class="disabled">⏵</a>
     <a href="#" id="stop" class="disabled">⏹</a>
-    <span id="volume" class="disabled">🔊&#xFE0E; <input type="range" id="volume-slider" min="0" max="100" value="80"><label for="volume"></label></span>
+    <a href ="#" id="volume" class="disabled">🔊&#xFE0E; </a><input type="range" id="volume-slider" class="disabled" min="0" max="100" value="80"><label for="volume"></label>
     <span id="loading">loading...</span>
   </div>
   <div class="deck-position">
